# RawSerde

./: Cargo.toml  LICENSE  README.md  arraycodegen.lua  tuplecodegen.lua
raw_serde_derive/: Cargo.toml
raw_serde_derive/src/: lib.rs
src/: array.rs  check.rs  collections.rs  deserialize.rs  lib.rs  option.rs  primitives.rs  serialize.rs  tuple.rs
